set up shared project for models.

--- a/Cleo/Cleo/Cleo/Cleo.csproj
+++ b/Cleo/Cleo/Cleo/Cleo.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Cleo.Shared\Cleo.Shared.csproj" />
     <ProjectReference Include="..\Cleo.Client\Cleo.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.8" />
   </ItemGroup>
