--- a/Cleo/Cleo/Cleo.Client/Cleo.Client.csproj
+++ b/Cleo/Cleo/Cleo.Client/Cleo.Client.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Cleo.Shared\Cleo.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
