installed entity framework packages

--- a/Cleo/Cleo/Cleo/Cleo.csproj
+++ b/Cleo/Cleo/Cleo/Cleo.csproj
@@ -10,6 +10,12 @@
     <ProjectReference Include="..\..\Cleo.Shared\Cleo.Shared.csproj" />
     <ProjectReference Include="..\Cleo.Client\Cleo.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
