--- a/Cleo/Cleo/Cleo/appsettings.json
+++ b/Cleo/Cleo/Cleo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=Cleo.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
